tenants/jh-project/network-policies/admin-kube-rbac-proxy-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-kube-rbac-proxy-np
  namespace: jh-project
spec:
  ingress:
  - ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      notebook-name: admin
  policyTypes:
  - Ingress
