tenants/jh-project/network-policies/admin-workbench-ctrl-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-workbench-ctrl-np
  namespace: jh-project
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redhat-ods-applications
    ports:
    - port: 8888
      protocol: TCP
  podSelector:
    matchLabels:
      notebook-name: admin-workbench
  policyTypes:
  - Ingress
