tenants/jh-project/network-policies/np-jhwrkbch1-ctrl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-jhwrkbch1-ctrl
  namespace: jh-project
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redhat-ods-applications
    ports:
    - port: 9999
      protocol: TCP
  podSelector:
    matchLabels:
      notebook-name: jhwrkbch1
  policyTypes:
  - Ingress
